manifests/applications/argocd/argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: argocd-http
  namespace: argocd
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: argocd.<path:stringreplacesecret#domain>
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  name: argocd-grpc
  namespace: argocd
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: argocd.<path:stringreplacesecret#domain>
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
  - argocd.<path:stringreplacesecret#domain>
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
  - argocd.<path:stringreplacesecret#domain>
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
